<resources>
    <string name="app_name">unsplash_01</string>
    <string name="home">Home</string>
    <string name="collection">Collection</string>
    <string name="favorite">Favorite</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="likes">Likes</string>
    <string name="saturation">Saturation</string>
    <string name="contrast">Contrast</string>
    <string name="warmth">Warmth</string>
    <string name="counter_photo"> %s Photos</string>
    <string name="text_loading">Loading...</string>
    <string name="search_hint">search</string>
    <string name="text_not_permission">You do not have permission to use this function</string>
    <string name="text_download_success">Download success!</string>
</resources>
