<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="photoDetail"
            type="com.sun.unsplash_01.data.model.PhotoDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewImageDetail"
            onLoadImage="@{photoDetail.urlPhoto.thumb}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAuthorAvatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_28sdp"
            app:cardCornerRadius="@dimen/_16sdp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewImageDetail"
            app:layout_constraintWidth_percent="0.07">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewAuthorAvatar"
                onLoadImage="@{photoDetail.authorInformation.avatar.smallAvatar}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@{photoDetail.authorInformation.name}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/cardViewAuthorAvatar"
            app:layout_constraintStart_toEndOf="@id/cardViewAuthorAvatar"
            app:layout_constraintTop_toTopOf="@+id/cardViewAuthorAvatar" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="@+id/cardViewAuthorAvatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewImageDetail"
            app:layout_constraintTop_toTopOf="@+id/cardViewAuthorAvatar" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_download"
            app:layout_constraintBottom_toBottomOf="@+id/cardViewAuthorAvatar"
            app:layout_constraintEnd_toStartOf="@id/imageButtonFavorite"
            app:layout_constraintTop_toBottomOf="@id/imageViewImageDetail"
            app:layout_constraintTop_toTopOf="@+id/cardViewAuthorAvatar" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_crop"
            app:layout_constraintBottom_toBottomOf="@+id/cardViewAuthorAvatar"
            app:layout_constraintEnd_toStartOf="@id/imageButtonDownload"
            app:layout_constraintTop_toBottomOf="@id/imageViewImageDetail"
            app:layout_constraintTop_toTopOf="@+id/cardViewAuthorAvatar" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_draw"
            app:layout_constraintBottom_toBottomOf="@+id/cardViewAuthorAvatar"
            app:layout_constraintEnd_toStartOf="@id/imageButtonCrop"
            app:layout_constraintTop_toBottomOf="@id/imageViewImageDetail"
            app:layout_constraintTop_toTopOf="@+id/cardViewAuthorAvatar" />

        <View
            android:id="@+id/viewDivideItem"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@color/color_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewAuthorAvatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSaturation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/saturation"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewDivideItem" />

        <SeekBar
            android:id="@+id/seekBarSaturation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:max="100"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSaturation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewContrast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/contrast"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarSaturation" />

        <SeekBar
            android:id="@+id/seekBarContrast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:max="100"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewContrast" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewWarmth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/warmth"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarContrast" />

        <SeekBar
            android:id="@+id/seekBarWarmth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:max="100"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWarmth" />

        <View
            android:id="@+id/viewDivideItemBottom"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@color/color_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBarWarmth" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textviewViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/views"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/textviewDownloads"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDivideItemBottom" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewViewsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@{photoDetail.views.toString()}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/textviewViews"
            app:layout_constraintStart_toStartOf="@+id/textviewViews"
            app:layout_constraintTop_toBottomOf="@+id/textviewViews" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textviewDownloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/downloads"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDivideItemBottom" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDownloadsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@{photoDetail.downloads.toString()}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/textviewDownloads"
            app:layout_constraintStart_toStartOf="@+id/textviewDownloads"
            app:layout_constraintTop_toBottomOf="@+id/textviewDownloads" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/likes"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textviewDownloads"
            app:layout_constraintTop_toBottomOf="@id/viewDivideItemBottom" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLikeData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@{photoDetail.likes.toString()}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/textViewLikes"
            app:layout_constraintStart_toStartOf="@+id/textViewLikes"
            app:layout_constraintTop_toBottomOf="@+id/textViewLikes" />

        <include
            android:id="@+id/progressLayout"
            layout="@layout/loader_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
